@@ -2,8 +2,8 @@ package leetcode.medium;
 
 import java.util.*;
 
-
 /**
+ * 全排列
  * 给定一个不含重复数字的数组 nums ，返回其 所有可能的全排列 。你可以 按任意顺序 返回答案。
  * 示例 1：
  * 输入：nums = [1,2,3]
@@ -14,15 +14,19 @@ import java.util.*;
  * 示例 3：
  * 输入：nums = [1]
  * 输出：[[1]]
+ * 提示：
+ * 1 <= nums.length <= 6
+ * -10 <= nums[i] <= 10
+ * nums 中的所有整数 互不相同
  */
 public class Solution_46 {
-    //回溯法
+    // 回溯法
     public List<List<Integer>> permute(int[] nums) {
         int len = nums.length;
         List<List<Integer>> lists = new ArrayList<>();
         List<Integer> list = new ArrayList<>();
-        for (int i = 0; i < len; i++) {
-            list.add(nums[i]);
+        for (int num : nums) {
+            list.add(num);
         }
         backtrack(lists, list, 0, len);
         return lists;
@@ -30,7 +34,7 @@ public class Solution_46 {
 
     public void backtrack(List<List<Integer>> lists, List<Integer> list, int first, int len) {
         if (first == len) {
-            lists.add(new ArrayList<Integer>(list));
+            lists.add(new ArrayList<>(list));
         }
         for (int i = first; i < len; i++) {
             Collections.swap(list, first, i);
@@ -44,12 +48,12 @@ public class Solution_46 {
 class Solution {
     public List<List<Integer>> permute(int[] nums) {
         List<List<Integer>> ans = new ArrayList<>();
-        Deque<Integer> path = new ArrayDeque<>();
+        List<Integer> path = new ArrayList<>();
         dfs(nums, path, ans);
         return ans;
     }
 
-    public void dfs(int[] nums, Deque<Integer> path, List<List<Integer>> ans) {
+    public void dfs(int[] nums, List<Integer> path, List<List<Integer>> ans) {
         if (path.size() == nums.length) {
             ans.add(new ArrayList<>(path));
             return;
@@ -58,7 +62,7 @@ class Solution {
             if (!path.contains(nums[i])) {
                 path.add(nums[i]);
                 dfs(nums, path, ans);
-                path.removeLast();
+                path.remove(path.size() - 1);
             }
         }
     }
